TheMightyDude (24 December 2012)
--------------------------------------
Sanitized ZoneName so that we no longer have loads of \\ in the ZoneName.

TheMightyDude (17 December 2012)
--------------------------------------
Fixed a 10+ year old bug with checking ownership of a sector when building a base.

TheMightyDude (08 December 2012)
--------------------------------------
Updated log.php by request so that current selected date is the middle date allowing to move to the previous and next day and also jump back and forth 3 days.

TheMightyDude (02 December 2012)
--------------------------------------
Fixed error in German language file, category was [ibank] should be set to [igb] like the other language files.

TheMightyDude (20 November 2012)
--------------------------------------
Fixed bug in sched_turns.php should be using LEAST and not GREATEST.

TheMightyDude (19 November 2012)
--------------------------------------
Fixed PHP Notice:  Undefined variable: dest_sector in emerwarp.php on line 43, referer: device.php
Fixed SQL error in planet_report_ce.php we cannot use a bind ? for the tables field name.
Added New Banning Code, still need to add to the Admin Section and Add new Language Variables.
Cleaned Up check_ban.php file.
Updated Ranking Page and Template to allow for Online status to be LIME (#00FF00) for easier viewing.
Added ship_id and ip_address to Ranking Query for check_ban.
Added team_admin to Ranking Query plus checks to handle the displaying of the admin.
Fixed error in layout.tpl template file where it was still using the old backends location.

TheMightyDude (18 November 2012)
--------------------------------------
Fixed A Database error occurred in includes/planet_combat.php on line 487 (called from: planet.php: Unknown column 'dev_planets.planet_id' in 'where clause'
Fixed A Database error occurred in bounty.php on line 220 (called from: bounty.php: Unknown column 'amount' in 'field list'